test/neg/neg-as_rpc3.errc
function object provided to as_rpc cannot be invoked on the given arguments as rvalue references
